src/objects/Court_Case__c.object
<CustomObject>
    <fields>
        <fullName>Case_Outcome__c</fullName>
        <label>Case Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>-</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <label>Case Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type_of_Case__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>-</fullName>
                </value>
                <value>
                    <fullName>Petition Filed</fullName>
                </value>
                <value>
                    <fullName>Emergency Granted, Pending Hearing</fullName>
                </value>
                <value>
                    <fullName>Emergency Denied, Pending Hearing</fullName>
                </value>
                <value>
                    <fullName>Petition Granted</fullName>
                </value>
                <value>
                    <fullName>Petition Dismissed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case__c</referenceTo>
        <relationshipLabel>Related Court Cases</relationshipLabel>
        <relationshipName>Court_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Attorney__c</fullName>
        <label>Client&apos;s Attorney</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DistrictCourtCounty__c</fullName>
        <label>District Court County</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Oklahoma</fullName>
                </value>
                <value>
                    <fullName>Adair</fullName>
                </value>
                <value>
                    <fullName>Alfalfa</fullName>
                </value>
                <value>
                    <fullName>Atoka</fullName>
                </value>
                <value>
                    <fullName>Beaver</fullName>
                </value>
                <value>
                    <fullName>Beckham</fullName>
                </value>
                <value>
                    <fullName>Blaine</fullName>
                </value>
                <value>
                    <fullName>Bryan</fullName>
                </value>
                <value>
                    <fullName>Caddo</fullName>
                </value>
                <value>
                    <fullName>Canadian</fullName>
                </value>
                <value>
                    <fullName>Carter</fullName>
                </value>
                <value>
                    <fullName>Cherokee</fullName>
                </value>
                <value>
                    <fullName>Choctaw</fullName>
                </value>
                <value>
                    <fullName>Cimarron</fullName>
                </value>
                <value>
                    <fullName>Cleveland</fullName>
                </value>
                <value>
                    <fullName>Coal</fullName>
                </value>
                <value>
                    <fullName>Comanche</fullName>
                </value>
                <value>
                    <fullName>Cotton</fullName>
                </value>
                <value>
                    <fullName>Craig</fullName>
                </value>
                <value>
                    <fullName>Creek</fullName>
                </value>
                <value>
                    <fullName>Custer</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Dewey</fullName>
                </value>
                <value>
                    <fullName>Ellis</fullName>
                </value>
                <value>
                    <fullName>Garfield</fullName>
                </value>
                <value>
                    <fullName>Garvin</fullName>
                </value>
                <value>
                    <fullName>Grady</fullName>
                </value>
                <value>
                    <fullName>Grant</fullName>
                </value>
                <value>
                    <fullName>Greer</fullName>
                </value>
                <value>
                    <fullName>Harmon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Judge__c</fullName>
        <label>Judge</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Hearing_Date__c</fullName>
        <label>Next Hearing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opposing_Counsel__c</fullName>
        <label>Opposing Counsel</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Case__c</fullName>
        <label>Type of Case</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Criminal Felony</fullName>
                </value>
                <value>
                    <fullName>Criminal Misdemeanor</fullName>
                </value>
                <value>
                    <fullName>Family &amp; Domestic</fullName>
                </value>
                <value>
                    <fullName>VPO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Court Case</label>
    <nameField>
        <displayFormat>Court Case - {000000}</displayFormat>
        <label>Court Case ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Court Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>